--- a/SaveViewAsBitMap/Resources/layout/Main.axml
+++ b/SaveViewAsBitMap/Resources/layout/Main.axml
@@ -16,8 +16,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView1" />
+  <LinearLayout  
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+                 >
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView1" />
+    <ImageView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/imageView2" />
+
+  </LinearLayout>
+
 </LinearLayout>
